--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="container">
             <div class="flex flex-wrap">
                 <div class="w-full self-center px-4 lg:w-1/2">
-                    <h1 class="text-base font-semibold text-primary md:text-xl">Halo semua 👋, saya <span class="block font-bold text-dark text-4xl mt-1 lg:text-5xl">Wiefran Varenzo</span></h1>
+                    <h1 class="text-base font-semibold text-primary md:text-xl"> <span class="block font-bold text-dark text-4xl mt-1 lg:text-5xl">Wiefran Varenzo</span></h1>
                     <h2 class="font-medium text-secondary text-lg mb-5 lg:text-2xl">Data Scientist | AI/ML Engineer</h2>
                     <p class="font-medium text-slate-400 mb-10 leading-relaxed">Follow your dreams, and let them come true</p>
                     <a href="#" class="text-base font-semibold text-white bg-primary py-3 px-8 rounded-full hover:shadow-lg hover:opacity-80 transition duration-200 ease-in-out">Hubungi Saya</a>
@@ -82,12 +82,22 @@
             <div class="flex flex-wrap">
                 <div class="w-full px-4 mb-10 lg:w-1/2">
                     <h4 class="font-bold uppercase text-primary text-lg mb-3">Tentang Saya</h4>
-                    <h2 class="font-bold text-dark text-3xl mb-5 max-w-sm lg:text-4xl">Pendidikan</h2>
-                    <p class="font-medium text-base text-secondary max-w-xl lg:text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias pariatur aperiam tempora consequuntur vel eius, voluptates quaerat eligendi consectetur magni iusto facilis beatae dolorum, esse quis quo nulla? Impedit, eos.</p>
+                    <h2 class="font-bold text-dark text-3xl mb-5 max-w-sm lg:text-3xl">Pendidikan</h2>
+                    <div class="font-medium text-base text-secondary max-w-xl lg:text-lg">
+                        <ul class="font-bold">
+                            Universitas Gunadarma
+                        </ul>
+                        <ul class="font-semibold text-base">
+                            2022 - Present
+                        </ul>
+                        <ul class="font-normal mt-4 text-base">
+                            IPK 3,97 - 5th Semester
+                        </ul>
+                    </div>
                 </div>
                 <div class="w-full px-4 lg:w-1/2">
-                    <h3 class="font-semibold text-dark text-2xl mb-4 lg:pt-10">Mari berteman</h3>
-                    <p class="font-medium text-base text-secondary mb-6 lg:text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit sunt quae laboriosam quis culpa ad, blanditiis reiciendis deserunt corporis rerum dolorem. Iure ex atque est ut consequatur dolorem! Blanditiis, quibusdam.</p>
+                    <h3 class="font-semibold text-dark text-3xl mb-4 lg:pt-10">Deskripsi diri</h3>
+                    <p class="font-medium text-justify text-secondary mb-6 lg:text-lg">Mahasiswa Ilmu Komputer dengan keahlian Python, SQL, dan visualisasi data. Berpengalaman dalam preprocessing, analisis data, dan pembuatan laporan. Unggul dalam menyampaikan hasil analisis secara jelas dan kolaboratif.</p>
                     <div class="flex items-center">
                         <!-- Github -->
                          <a href="https://github.com/WiefranVarenzo" target="_blank" class="w-9 h-9 mr-3 rounded-full flex justify-center items-center border border-slate-300 hover:border-primary hover:bg-blue-200 hover:text-white">
@@ -180,24 +190,36 @@
         <div class="container">
             <div class="w-full px-4">
                 <div class="mx-auto text-center mb-16">
-                    <h4 class="font-semibold text-lg text-primary mb-2">Clients</h4>
-                    <h2 class="font-bold text-white text-3xl mb-4 sm:text-4xl lg:text-5xl">Yang Pernah Bekerjasama</h2>
+                    <h4 class="font-semibold text-lg text-primary mb-2">Keahlian</h4>
+                    <h2 class="font-bold text-white text-3xl mb-4 sm:text-3xl lg:text-4xl">FrameWork & Programming Languanges</h2>
                     <p class="font-medium text-md text-secondary md:text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam esse quae nemo qui fugiat error hic eveniet ratione a aspernatur?</p>
                 </div>
             </div>
             <div class="w-full px-4">
                 <div class="flex flex-wrap items-center justify-center">
-                    <a href="#" class="max-w-[120px] mx-4 py-4 grayscale opacity-60 transition hover:grayscale-0 duration-300 hover:opacity-100 lg:mx-6 xl:mx-8">
-                        <img src="/src/clients/google.svg" alt="google"/>
+                    <a href="#" class="max-w-[120px] mx-4 py-4 transition hover:grayscale-0 duration-300 hover:opacity-100 lg:mx-6 xl:mx-8">
+                        <img src="/src/clients/SQL1.svg" alt="google"/>
                     </a>
-                    <a href="#" class="max-w-[120px] mx-4 py-4 grayscale opacity-60 transition hover:grayscale-0 duration-300 hover:opacity-100 lg:mx-6 xl:mx-8">
-                        <img src="/src/clients/google.svg" alt="google"/>
+                    <a href="#" class="max-w-[120px] mx-4 py-4 transition hover:grayscale-0 duration-300 hover:opacity-100 lg:mx-6 xl:mx-8">
+                        <img src="/src/clients/pyhton.svg" alt="google"/>
                     </a>
-                    <a href="#" class="max-w-[120px] mx-4 py-4 grayscale opacity-60 transition hover:grayscale-0 duration-300 hover:opacity-100 lg:mx-6 xl:mx-8">
-                        <img src="/src/clients/google.svg" alt="google"/>
+                    <a href="#" class="max-w-[120px] mx-4 py-4 transition hover:grayscale-0 duration-300 hover:opacity-100 lg:mx-6 xl:mx-8">
+                        <img src="/src/clients/pytorch.svg" alt="google"/>
                     </a>
-                    <a href="#" class="max-w-[120px] mx-4 py-4 grayscale opacity-60 transition hover:grayscale-0 duration-300 hover:opacity-100 lg:mx-6 xl:mx-8">
-                        <img src="/src/clients/google.svg" alt="google"/>
+                    <a href="#" class="max-w-[120px] mx-4 py-4 transition hover:grayscale-0 duration-300 hover:opacity-100 lg:mx-6 xl:mx-8">
+                        <img src="/src/clients/tensorflow1.svg" alt="google"/>
+                    </a>
+                    <a href="#" class="max-w-[120px] mx-4 py-4 transition hover:grayscale-0 duration-300 hover:opacity-100 lg:mx-6 xl:mx-8">
+                        <img src="/src/clients/tableau.svg" alt="google"/>
+                    </a>
+                    <a href="#" class="max-w-[120px] mx-4 py-4 transition hover:grayscale-0 duration-300 hover:opacity-100 lg:mx-6 xl:mx-8">
+                        <img src="/src/clients/kotlin.svg" alt="google"/>
+                    </a>
+                    <a href="#" class="max-w-[120px] mx-4 py-4 transition hover:grayscale-0 duration-300 hover:opacity-100 lg:mx-6 xl:mx-8">
+                        <img src="/src/clients/scikitlearn.svg" alt="google"/>
+                    </a>
+                    <a href="#" class="max-w-[120px] mx-4 py-4 transition hover:grayscale-0 duration-300 hover:opacity-100 lg:mx-6 xl:mx-8">
+                        <img src="/src/clients/golang.svg" alt="google"/>
                     </a>
                 </div>
             </div>
