--- a/index.html
+++ b/index.html
@@ -135,28 +135,28 @@
             <div class="w-full px-4">
                 <div class="flex flex-wrap items-center justify-center">
                     <a href="#" class="max-w-[120px] mx-4 py-4 transition hover:grayscale-0 duration-300 hover:opacity-100 lg:mx-6 xl:mx-8">
-                        <img src="./src/keahlian/SQL1.svg" alt="sql"/>
+                        <img src="./src/clients/SQL1.svg" alt="sql"/>
                     </a>
                     <a href="#" class="max-w-[120px] mx-4 py-4 transition hover:grayscale-0 duration-300 hover:opacity-100 lg:mx-6 xl:mx-8">
-                        <img src="./src/keahlian/pyhton.svg" alt="python"/>
+                        <img src="./src/clients/pyhton.svg" alt="python"/>
                     </a>
                     <a href="#" class="max-w-[120px] mx-4 py-4 transition hover:grayscale-0 duration-300 hover:opacity-100 lg:mx-6 xl:mx-8">
-                        <img src="./src/keahlian/pytorch.svg" alt="pytorch"/>
+                        <img src="./src/clients/pytorch.svg" alt="pytorch"/>
                     </a>
                     <a href="#" class="max-w-[120px] mx-4 py-4 transition hover:grayscale-0 duration-300 hover:opacity-100 lg:mx-6 xl:mx-8">
-                        <img src="./src/keahlian/tensorflow1.svg" alt="tensorflow"/>
+                        <img src="./src/clients/tensorflow1.svg" alt="tensorflow"/>
                     </a>
                     <a href="#" class="max-w-[120px] mx-4 py-4 transition hover:grayscale-0 duration-300 hover:opacity-100 lg:mx-6 xl:mx-8">
-                        <img src="./src/keahlian/tableau.svg" alt="tableau"/>
+                        <img src="./src/clients/tableau.svg" alt="tableau"/>
                     </a>
                     <a href="#" class="max-w-[120px] mx-4 py-4 transition hover:grayscale-0 duration-300 hover:opacity-100 lg:mx-6 xl:mx-8">
-                        <img src="./src/keahlian/kotlin.svg" alt="kotlin"/>
+                        <img src="./src/clients/kotlin.svg" alt="kotlin"/>
                     </a>
                     <a href="#" class="max-w-[120px] mx-4 py-4 transition hover:grayscale-0 duration-300 hover:opacity-100 lg:mx-6 xl:mx-8">
-                        <img src="./src/keahlian/scikitlearn.svg" alt="scikitlearn"/>
+                        <img src="./src/clients/scikitlearn.svg" alt="scikitlearn"/>
                     </a>
                     <a href="#" class="max-w-[120px] mx-4 py-4 transition hover:grayscale-0 duration-300 hover:opacity-100 lg:mx-6 xl:mx-8">
-                        <img src="./src/keahlian/golang.svg" alt="golang"/>
+                        <img src="./src/clients/golang.svg" alt="golang"/>
                     </a>
                 </div>
             </div>
