--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <div class="w-full px-4">
                 <div class="mx-auto text-center mb-16">
                     <h4 class="font-semibold text-lg text-primary mb-2">Keahlian</h4>
-                    <h2 class="font-bold text-white text-3xl mb-4 sm:text-3xl lg:text-4xl">FrameWork & Programming Languanges</h2>
+                    <h2 class="font-bold text-white text-3xl mb-4 sm:text-3xl lg:text-4xl">FrameWork, Tools & Programming Languanges</h2>
                 </div>
             </div>
             <div class="w-full px-4">
