--- a/index.html
+++ b/index.html
@@ -164,60 +164,84 @@
       </section>
     <!-- keahlian End -->
      <!-- Portofolio Start -->
- <section id="portofolio" class="pt-36 pb-16 bg-slate-100">
-        <div class="container">
-            <div class="w-full px-4">
-                <div class="max-w-xl mx-auto text-center mb-16">
-                    <h4 class="font-semibold text-lg text-primary mb-2">Portofolio</h4>
-                    <h2 class="font-bold text-dark text-3xl mb-4 sm:text-4xl lg:text-5xl">Project Terbaru</h2>
-                    <p class="font-medium text-md text-secondary md:text-lg">Portofolio ini menampilkan proyek-proyek yang berfokus pada penerapan data cleaning, preprocessing, dan machine learning untuk menganalisis data secara mendalam. Hasil analisis disajikan melalui visualisasi grafik yang informatif untuk menggali wawasan berbasis data</p>
-                </div>
-            </div>
+<section id="portofolio" class="pt-36 pb-16 bg-slate-100">
+  <div class="container">
+    <div class="w-full px-4">
+      <div class="max-w-xl mx-auto text-center mb-16">
+        <h4 class="font-semibold text-lg text-primary mb-2">Portofolio</h4>
+        <h2 class="font-bold text-dark text-3xl mb-4 sm:text-4xl lg:text-5xl">Project Terbaru</h2>
+        <p class="font-medium text-md text-secondary md:text-lg">
+          Portofolio ini menampilkan proyek-proyek yang berfokus pada penerapan data cleaning, preprocessing, dan machine learning untuk menganalisis data secara mendalam. Hasil analisis disajikan melalui visualisasi grafik yang informatif untuk menggali wawasan berbasis data
+        </p>
+      </div>
+    </div>
 
-            <div class="w-full px-4 flex flex-wrap justify-center xl:w-10/12 xl:mx-auto">
-                <div class="mb-12 p-4 md:w-1/2">
-                    <div class="rounded-md shadow-md overflow-hidden">
-                        <img src="src/img/portofolio/Bert.png" alt="LLM_Bert" width="w-full"/>
-                    </div>
-                    <h3 class="font-semibold text-xl text-dark mt-5 mb-3">NLP Menggunakan LLM dengan model Bert untuk Analisa Sentimen</h3>
-                    <p class="font-medium text-base text-secondary">Menggunakan Large Language Model dengan melakukan fine-tuning pada dataset sentiment emosi dari twitter. Dapat menganalisa 6 jenis sentimen emosi dari video yang di upload. Model dan API yang dipakai adalah Bert dan Whisper Ai</p>
-                    <p class="font-semibold text-base text-secondary">Dataset: 7080 Baris x 2 Kolom </p>
-                </div>
-                <div class="mb-12 p-4 md:w-1/2">
-                    <div class="rounded-md shadow-md overflow-hidden">
-                        <img src="src/img/portofolio/3.png" alt="IPKD Data Analysis" width="w-full"/>
-                    </div>
-                    <h3 class="font-semibold text-xl text-dark mt-5 mb-3">Website Analisis IPKD</h3>
-                    <p class="font-medium text-base text-secondary">Menggunakan Klasifikasi KNN dan Feature Selection dalam menghitung Indeks Pembangunan Kesehatan Daerah. Menggunakan Streamlit untuk dashboard visualisasi serta memproses perhitungan dan mengubah hasil perhitungan ke format file excel </p>
-                    <p class="font-semibold text-base text-secondary">Dataset: 102 Baris x 1222 Feature Kolom</p>
-                </div>
-                <div class="mb-12 p-4 md:w-1/2">
-                    <div class="rounded-md shadow-md overflow-hidden">
-                        <img src="src/img/portofolio/4.png" alt="Hydorponic Monitoring IoT" width="w-full"/>
-                    </div>
-                    <h3 class="font-semibold text-xl text-dark mt-5 mb-3">Hydroponic Monitoring IoT + Analisa Penyakit tanaman (ComputerVision)</h3>
-                    <p class="font-medium text-base text-secondary">Menggabungkan IoT (6 sensor) dan Computer Vision untuk Memantau kondisi lingkungan Hydroponic untuk mengecek penyakit pada tanaman menggunakan Computer Vision</p>
-                    <p class="font-semibold text-base text-secondary">Dataset: 1821 Baris × 5 Kolom</p>
-                </div>
-                <div class="mb-12 p-4 md:w-1/2">
-                    <div class="rounded-md shadow-md overflow-hidden">
-                        <img src="src/img/portofolio/1.png" alt="HR Attrition Analysis" width="w-full"/>
-                    </div>
-                    <h3 class="font-semibold text-xl text-dark mt-5 mb-3">HR Attrition Analysis and Prediction Using Random Forest</h3>
-                    <p class="font-medium text-base text-secondary">Menganalisa Tingkat Karyawan yang Keluar dari suatu Perusahan dengan menggunakan model Random Forest Classifier dan memvisualisasikannya dengan Tableau</p>
-                    <p class="font-semibold text-base text-secondary">Dataset: 1470 Baris × 35 Kolom</p>
-                </div>
-                <div class="mb-12 p-4 md:w-1/2">
-                    <div class="rounded-md shadow-md overflow-hidden">
-                        <img src="src/img/portofolio/2.png" alt="Student Dropout Analysis" width="w-full"/>
-                    </div>
-                    <h3 class="font-semibold text-xl text-dark mt-5 mb-3">Student Dropout Analysis</h3>
-                    <p class="font-medium text-base text-secondary">Memprediksi dan menganalisa tingkat dropout mahasiswa dari faktor-faktor yang ditetapkan. Disini akan dicari faktor atau indikasi mana yang paling berpengaruh menggunakan feature importance, serta memprediksi menggunakan model Random Forest Classifier</p>
-                    <p class="font-semibold text-base text-secondary">Dataset: 4424 Baris × 37 Kolom</p>
-                </div>
-            </div>
+    <div class="w-full px-4 flex flex-wrap justify-center xl:w-10/12 xl:mx-auto">
+
+      <div class="mb-12 p-4 md:w-1/2">
+        <div class="rounded-md shadow-md overflow-hidden">
+          <img src="src/img/portofolio/Bert.png" alt="LLM_Bert" width="w-full"/>
         </div>
-      </section>
+        <h3 class="font-semibold text-xl text-dark mt-5 mb-3">NLP Menggunakan LLM dengan model Bert untuk Analisa Sentimen</h3>
+        <p class="font-medium text-base text-secondary">
+          Menggunakan Large Language Model dengan melakukan fine-tuning pada dataset sentiment emosi dari twitter. Dapat menganalisa 6 jenis sentimen emosi dari video yang di upload. Model dan API yang dipakai adalah Bert dan Whisper Ai
+        </p>
+        <p class="font-semibold text-base text-secondary">Dataset: 7080 Baris x 2 Kolom</p>
+        <a href="https://github.com/username/repository-bert-sentiment" class="text-primary font-medium inline-block mt-4 bg-primary text-white px-4 py-2 rounded-md shadow-md hover:bg-opacity-90">Lihat di GitHub</a>
+      </div>
+
+      <div class="mb-12 p-4 md:w-1/2">
+        <div class="rounded-md shadow-md overflow-hidden">
+          <img src="src/img/portofolio/3.png" alt="IPKD Data Analysis" width="w-full"/>
+        </div>
+        <h3 class="font-semibold text-xl text-dark mt-5 mb-3">Website Analisis IPKD</h3>
+        <p class="font-medium text-base text-secondary">
+          Menggunakan Klasifikasi KNN dan Feature Selection dalam menghitung Indeks Pembangunan Kesehatan Daerah. Menggunakan Streamlit untuk dashboard visualisasi serta memproses perhitungan dan mengubah hasil perhitungan ke format file excel
+        </p>
+        <p class="font-semibold text-base text-secondary">Dataset: 102 Baris x 1222 Feature Kolom</p>
+        <a href="https://github.com/username/repository-ipkd-analysis" class="text-primary font-medium inline-block mt-4 bg-primary text-white px-4 py-2 rounded-md shadow-md hover:bg-opacity-90">Lihat di GitHub</a>
+      </div>
+
+      <div class="mb-12 p-4 md:w-1/2">
+        <div class="rounded-md shadow-md overflow-hidden">
+          <img src="src/img/portofolio/4.png" alt="Hydorponic Monitoring IoT" width="w-full"/>
+        </div>
+        <h3 class="font-semibold text-xl text-dark mt-5 mb-3">Hydroponic Monitoring IoT + Analisa Penyakit tanaman (ComputerVision)</h3>
+        <p class="font-medium text-base text-secondary">
+          Menggabungkan IoT (6 sensor) dan Computer Vision untuk Memantau kondisi lingkungan Hydroponic untuk mengecek penyakit pada tanaman menggunakan Computer Vision
+        </p>
+        <p class="font-semibold text-base text-secondary">Dataset: 1821 Baris × 5 Kolom</p>
+        <a href="https://github.com/username/repository-hydroponic-iot" class="text-primary font-medium inline-block mt-4 bg-primary text-white px-4 py-2 rounded-md shadow-md hover:bg-opacity-90">Lihat di GitHub</a>
+      </div>
+
+      <div class="mb-12 p-4 md:w-1/2">
+        <div class="rounded-md shadow-md overflow-hidden">
+          <img src="src/img/portofolio/1.png" alt="HR Attrition Analysis" width="w-full"/>
+        </div>
+        <h3 class="font-semibold text-xl text-dark mt-5 mb-3">HR Attrition Analysis and Prediction Using Random Forest</h3>
+        <p class="font-medium text-base text-secondary">
+          Menganalisa Tingkat Karyawan yang Keluar dari suatu Perusahan dengan menggunakan model Random Forest Classifier dan memvisualisasikannya dengan Tableau
+        </p>
+        <p class="font-semibold text-base text-secondary">Dataset: 1470 Baris × 35 Kolom</p>
+        <a href="https://github.com/username/repository-hr-attrition" class="text-primary font-medium inline-block mt-4 bg-primary text-white px-4 py-2 rounded-md shadow-md hover:bg-opacity-90">Lihat di GitHub</a>
+      </div>
+
+      <div class="mb-12 p-4 md:w-1/2">
+        <div class="rounded-md shadow-md overflow-hidden">
+          <img src="src/img/portofolio/2.png" alt="Student Dropout Analysis" width="w-full"/>
+        </div>
+        <h3 class="font-semibold text-xl text-dark mt-5 mb-3">Student Dropout Analysis</h3>
+        <p class="font-medium text-base text-secondary">
+          Memprediksi dan menganalisa tingkat dropout mahasiswa dari faktor-faktor yang ditetapkan. Disini akan dicari faktor atau indikasi mana yang paling berpengaruh menggunakan feature importance, serta memprediksi menggunakan model Random Forest Classifier
+        </p>
+        <p class="font-semibold text-base text-secondary">Dataset: 4424 Baris × 37 Kolom</p>
+        <a href="https://github.com/username/repository-student-dropout" class="text-primary font-medium inline-block mt-4 bg-primary text-white px-4 py-2 rounded-md shadow-md hover:bg-opacity-90">Lihat di GitHub</a>
+      </div>
+
+    </div>
+  </div>
+</section>
+
      <!-- Portofolio End --> 
 
     
