--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
           Menggunakan Large Language Model dengan melakukan fine-tuning pada dataset sentiment emosi dari twitter. Dapat menganalisa 6 jenis sentimen emosi dari video yang di upload. Model dan API yang dipakai adalah Bert dan Whisper Ai
         </p>
         <p class="font-semibold text-base text-secondary">Dataset: 7080 Baris x 2 Kolom</p>
-        <a href="https://github.com/username/repository-bert-sentiment" class="text-primary font-medium inline-block mt-4 bg-primary text-white px-4 py-2 rounded-md shadow-md hover:bg-opacity-90">Lihat di GitHub</a>
+        <a href="https://github.com/WiefranVarenzo/TellMe" class="text-primary font-medium inline-block mt-4 bg-primary text-white px-4 py-2 rounded-md shadow-md hover:bg-opacity-90">Lihat di GitHub</a>
       </div>
 
       <div class="mb-12 p-4 md:w-1/2">
@@ -199,7 +199,7 @@
           Menggunakan Klasifikasi KNN dan Feature Selection dalam menghitung Indeks Pembangunan Kesehatan Daerah. Menggunakan Streamlit untuk dashboard visualisasi serta memproses perhitungan dan mengubah hasil perhitungan ke format file excel
         </p>
         <p class="font-semibold text-base text-secondary">Dataset: 102 Baris x 1222 Feature Kolom</p>
-        <a href="https://github.com/username/repository-ipkd-analysis" class="text-primary font-medium inline-block mt-4 bg-primary text-white px-4 py-2 rounded-md shadow-md hover:bg-opacity-90">Lihat di GitHub</a>
+        <a href="https://github.com/WiefranVarenzo/IPKD" class="text-primary font-medium inline-block mt-4 bg-primary text-white px-4 py-2 rounded-md shadow-md hover:bg-opacity-90">Lihat di GitHub</a>
       </div>
 
       <div class="mb-12 p-4 md:w-1/2">
@@ -211,7 +211,7 @@
           Menggabungkan IoT (6 sensor) dan Computer Vision untuk Memantau kondisi lingkungan Hydroponic untuk mengecek penyakit pada tanaman menggunakan Computer Vision
         </p>
         <p class="font-semibold text-base text-secondary">Dataset: 1821 Baris × 5 Kolom</p>
-        <a href="https://github.com/username/repository-hydroponic-iot" class="text-primary font-medium inline-block mt-4 bg-primary text-white px-4 py-2 rounded-md shadow-md hover:bg-opacity-90">Lihat di GitHub</a>
+        <a href="https://drive.google.com/drive/folders/1x3DjNUqxiJCb1V5uljuqCidNR8pTv7mD" class="text-primary font-medium inline-block mt-4 bg-primary text-white px-4 py-2 rounded-md shadow-md hover:bg-opacity-90">Lihat Proyek</a>
       </div>
 
       <div class="mb-12 p-4 md:w-1/2">
@@ -223,7 +223,7 @@
           Menganalisa Tingkat Karyawan yang Keluar dari suatu Perusahan dengan menggunakan model Random Forest Classifier dan memvisualisasikannya dengan Tableau
         </p>
         <p class="font-semibold text-base text-secondary">Dataset: 1470 Baris × 35 Kolom</p>
-        <a href="https://github.com/username/repository-hr-attrition" class="text-primary font-medium inline-block mt-4 bg-primary text-white px-4 py-2 rounded-md shadow-md hover:bg-opacity-90">Lihat di GitHub</a>
+        <a href="https://github.com/WiefranVarenzo/Dicoding-Expert" class="text-primary font-medium inline-block mt-4 bg-primary text-white px-4 py-2 rounded-md shadow-md hover:bg-opacity-90">Lihat di GitHub</a>
       </div>
 
       <div class="mb-12 p-4 md:w-1/2">
@@ -235,7 +235,7 @@
           Memprediksi dan menganalisa tingkat dropout mahasiswa dari faktor-faktor yang ditetapkan. Disini akan dicari faktor atau indikasi mana yang paling berpengaruh menggunakan feature importance, serta memprediksi menggunakan model Random Forest Classifier
         </p>
         <p class="font-semibold text-base text-secondary">Dataset: 4424 Baris × 37 Kolom</p>
-        <a href="https://github.com/username/repository-student-dropout" class="text-primary font-medium inline-block mt-4 bg-primary text-white px-4 py-2 rounded-md shadow-md hover:bg-opacity-90">Lihat di GitHub</a>
+        <a href="https://github.com/WiefranVarenzo/DicodingExpert2" class="text-primary font-medium inline-block mt-4 bg-primary text-white px-4 py-2 rounded-md shadow-md hover:bg-opacity-90">Lihat di GitHub</a>
       </div>
 
     </div>
