--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
         </div>
         <h3 class="font-semibold text-xl text-dark mt-5 mb-3">Website Analisis IPKD</h3>
         <p class="font-medium text-base text-secondary">
-          Menggunakan Klasifikasi KNN dan Feature Selection dalam menghitung Indeks Pembangunan Kesehatan Daerah. Menggunakan Streamlit untuk dashboard visualisasi serta memproses perhitungan dan mengubah hasil perhitungan ke format file excel
+          Menggunakan Klasifikasi K-Means dan Feature Selection dalam menghitung Indeks Pembangunan Kesehatan Daerah. Menggunakan Streamlit untuk dashboard visualisasi serta memproses perhitungan dan mengubah hasil perhitungan ke format file excel
         </p>
         <p class="font-semibold text-base text-secondary">Dataset: 102 Baris x 1222 Feature Kolom</p>
         <a href="https://github.com/WiefranVarenzo/IPKD" class="text-primary font-medium inline-block mt-4 bg-primary text-white px-4 py-2 rounded-md shadow-md hover:bg-opacity-90">Lihat di GitHub</a>
