--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
           Menganalisis masalah perusahaan dan memberikan solusi yang efektif. Dengan memvisualisasikan data keuangan dari laporan keuangan perusahaan, kemudian menghasilkan wawasan bisnis yang tepat.
         </p>
         <p class="font-semibold text-base text-secondary">Source Data: Website laporan keuangan perusahaan</p>
-        <a href="https://github.com/WiefranVarenzo/DicodingExpert2" class="text-primary font-medium inline-block mt-4 bg-primary text-white px-4 py-2 rounded-md shadow-md hover:bg-opacity-90">Lihat di GitHub</a>
+        <a href="https://drive.google.com/file/d/1fslKoXl3YzFs_ymq-HsyKZ7jWc4KYUuZ/view?usp=sharing" class="text-primary font-medium inline-block mt-4 bg-primary text-white px-4 py-2 rounded-md shadow-md hover:bg-opacity-90">Lihat Presentasi</a>
       </div>
 
       <div class="mb-12 p-4 md:w-1/2">
