--- a/index.html
+++ b/index.html
@@ -175,6 +175,25 @@
 
     <div id="portfolio-container" class="w-full px-4 flex flex-wrap justify-center xl:w-10/12 xl:mx-auto">
 
+        <div class="mb-12 p-4 md:w-1/2">
+        <div class="rounded-md shadow-md overflow-hidden">
+            <img src="src/img/portofolio/11.png" alt="Anevia" width="w-full"/>
+        </div>
+        <h3 class="font-semibold text-xl text-dark mt-5 mb-3">Anemia Detection using Conjungtiva Palpebral</h3>
+        <p class="font-medium text-base text-secondary">
+            Anevia adalah website deteksi dini anemia. Sebagai Machine Learning Engineer, saya membangun model segmentasi U-Net dengan ResNet50 untuk memetakan konjungtiva palpebra dari citra RGB menggunakan Dice dan Focal Loss.
+        </p>
+        <p class="font-semibold text-base text-secondary">Dataset: 547 Images of Eyes and Masks Annotator</p>
+        <div class="flex gap-6 mt-4">
+            <a href="https://github.com/Anevia-Capstone" class="text-primary font-medium bg-primary text-white px-4 py-2 rounded-md shadow-md hover:bg-opacity-90">
+            Lihat GitHub
+            </a>
+            <a href="https://www.anevia.my.id/" class="text-primary font-medium bg-secondary text-white px-4 py-2 rounded-md shadow-md hover:bg-opacity-90">
+            Lihat Website
+            </a>
+        </div>
+        </div>
+  
       <div class="portfolio-item mb-12 p-4 md:w-1/2">
         <div class="rounded-md shadow-md overflow-hidden">
           <img src="src/img/portofolio/Bert.png" alt="LLM_Bert" width="w-full"/>
@@ -187,17 +206,30 @@
         <a href="https://github.com/WiefranVarenzo/TellMe" class="text-primary font-medium inline-block mt-4 bg-primary text-white px-4 py-2 rounded-md shadow-md hover:bg-opacity-90">Lihat di GitHub</a>
       </div>
 
-      <div class="portfolio-item mb-12 p-4 md:w-1/2">
+        <div class="mb-12 p-4 md:w-1/2">
         <div class="rounded-md shadow-md overflow-hidden">
-          <img src="src/img/portofolio/3.png" alt="IPKD Data Analysis" width="w-full"/>
+          <img src="src/img/portofolio/10.png" alt="Recommendation_system_fashion_ecommerce" width="w-full"/>
         </div>
-        <h3 class="font-semibold text-xl text-dark mt-5 mb-3">Website Analisis IPKD</h3>
+        <h3 class="font-semibold text-xl text-dark mt-5 mb-3">Recommendation System Project</h3>
         <p class="font-medium text-base text-secondary">
-          Menggunakan Klasifikasi K-Means dan Feature Selection dalam menghitung Indeks Pembangunan Kesehatan Daerah. Menggunakan Streamlit untuk dashboard visualisasi serta memproses perhitungan dan mengubah hasil perhitungan ke format file excel
+            Proyek ini membangun sistem rekomendasi fashion pada E-commerce menggunakan content-based (TF-IDF, LSA) dan collaborative filtering (RecommenderNet, Matrix Factorization) untuk memberikan saran produk yang relevan dan personal kepada pengguna.  
         </p>
-        <p class="font-semibold text-base text-secondary">Dataset: 102 Baris x 1222 Feature Kolom</p>
-        <a href="https://github.com/WiefranVarenzo/IPKD" class="text-primary font-medium inline-block mt-4 bg-primary text-white px-4 py-2 rounded-md shadow-md hover:bg-opacity-90">Lihat di GitHub</a>
+        <p class="font-semibold text-base text-secondary">Dataset: 6.416.827 Baris x 58 kolom</p>
+        <a href="https://github.com/WiefranVarenzo/Recommendation-System-Project" class="text-primary font-medium inline-block mt-4 bg-primary text-white px-4 py-2 rounded-md shadow-md hover:bg-opacity-90">Lihat Proyek</a>
       </div>
+
+    <div class="mb-12 p-4 md:w-1/2">
+        <div class="rounded-md shadow-md overflow-hidden">
+          <img src="src/img/portofolio/8.png" alt="BCA_SentimentAnalysis" width="w-full"/>
+        </div>
+        <h3 class="font-semibold text-xl text-dark mt-5 mb-3">Sentiment Analysis of BCA Mobile Reviews on Google Play Store</h3>
+        <p class="font-medium text-base text-secondary">
+            Proyek ini bertujuan menganalisis sentimen aplikasi BCA dari scraping komentar Play Store, dengan melakukan preprocessing dan membandingkan tiga model: RCNN+FastText, GRU+GloVe, serta LSTM+Word2Vec untuk klasifikasi terbaik.
+        </p>
+        <p class="font-semibold text-base text-secondary">Dataset :144.000 Baris x 9 Kolom</p>
+        <a href="https://github.com/WiefranVarenzo/Sentiment-Analysis-of-BCA-Mobile-Reviews-on-Google-Play-Store" class="text-primary font-medium inline-block mt-4 bg-primary text-white px-4 py-2 rounded-md shadow-md hover:bg-opacity-90">Lihat Proyek</a>
+      </div>
+
 
       <div class="portfolio-item project-hidden mb-12 p-4 md:w-1/2">
         <div class="rounded-md shadow-md overflow-hidden">
@@ -235,17 +267,6 @@
         <a href="https://github.com/WiefranVarenzo/Dicoding-Expert" class="text-primary font-medium inline-block mt-4 bg-primary text-white px-4 py-2 rounded-md shadow-md hover:bg-opacity-90">Lihat di GitHub</a>
       </div>
 
-      <div class="portfolio-item project-hidden mb-12 p-4 md:w-1/2">
-        <div class="rounded-md shadow-md overflow-hidden">
-          <img src="src/img/portofolio/2.png" alt="Student Dropout Analysis" width="w-full"/>
-        </div>
-        <h3 class="font-semibold text-xl text-dark mt-5 mb-3">Student Dropout Analysis</h3>
-        <p class="font-medium text-base text-secondary">
-          Memprediksi dan menganalisa tingkat dropout mahasiswa dari faktor-faktor yang ditetapkan. Disini akan dicari faktor atau indikasi mana yang paling berpengaruh menggunakan feature importance, serta memprediksi menggunakan model Random Forest Classifier
-        </p>
-        <p class="font-semibold text-base text-secondary">Dataset: 4424 Baris × 37 Kolom</p>
-        <a href="https://github.com/WiefranVarenzo/DicodingExpert2" class="text-primary font-medium inline-block mt-4 bg-primary text-white px-4 py-2 rounded-md shadow-md hover:bg-opacity-90">Lihat di GitHub</a>
-      </div>
     </div>
     <div class="w-full px-4 flex justify-center">
         <button id="more-button" class="text-base font-semibold text-white bg-primary py-3 px-8 rounded-full hover:shadow-lg hover:opacity-80 transition duration-200 ease-in-out">Tampilkan Lebih Banyak</button>
