--- a/index.html
+++ b/index.html
@@ -266,6 +266,19 @@
         <p class="font-semibold text-base text-secondary">Dataset: 1470 Baris × 35 Kolom</p>
         <a href="https://github.com/WiefranVarenzo/Dicoding-Expert" class="text-primary font-medium inline-block mt-4 bg-primary text-white px-4 py-2 rounded-md shadow-md hover:bg-opacity-90">Lihat di GitHub</a>
       </div>
+        
+      <div class="portfolio-item project-hidden mb-12 p-4 md:w-1/2">
+        <div class="rounded-md shadow-md overflow-hidden">
+          <img src="src/img/portofolio/2.png" alt="Student Dropout Analysis" width="w-full"/>
+        </div>
+        <h3 class="font-semibold text-xl text-dark mt-5 mb-3">Student Dropout Analysis</h3>
+        <p class="font-medium text-base text-secondary">
+          Memprediksi dan menganalisa tingkat dropout mahasiswa dari faktor-faktor yang ditetapkan. Disini akan dicari faktor atau indikasi mana yang paling berpengaruh menggunakan feature importance, serta memprediksi menggunakan model Random Forest Classifier
+        </p>
+        <p class="font-semibold text-base text-secondary">Dataset: 4424 Baris × 37 Kolom</p>
+        <a href="https://github.com/WiefranVarenzo/DicodingExpert2" class="text-primary font-medium inline-block mt-4 bg-primary text-white px-4 py-2 rounded-md shadow-md hover:bg-opacity-90">Lihat di GitHub</a>
+      </div>
+      
 
     </div>
     <div class="w-full px-4 flex justify-center">
