--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
           Menggunakan Large Language Model dengan melakukan fine-tuning pada dataset sentiment emosi dari twitter. Dapat menganalisa 6 jenis sentimen emosi dari video yang di upload. Model dan API yang dipakai adalah Bert dan Whisper Ai
         </p>
         <p class="font-semibold text-base text-secondary">Dataset: 7080 Baris x 2 Kolom</p>
-        <a href="https://github.com/WiefranVarenzo/TellMe" class="text-primary font-medium inline-block mt-4 bg-primary text-white px-4 py-2 rounded-md shadow-md hover:bg-opacity-90">Lihat di GitHub</a>
+        <a href="https://github.com/WiefranVarenzo/TellMe" class="text-primary font-medium inline-block mt-4 bg-primary text-white px-4 py-2 rounded-md shadow-md hover:bg-opacity-90">Lihat GitHub</a>
       </div>
 
         <div class="mb-12 p-4 md:w-1/2">
@@ -215,7 +215,7 @@
             Proyek ini membangun sistem rekomendasi fashion pada E-commerce menggunakan content-based (TF-IDF, LSA) dan collaborative filtering (RecommenderNet, Matrix Factorization) untuk memberikan saran produk yang relevan dan personal kepada pengguna.  
         </p>
         <p class="font-semibold text-base text-secondary">Dataset: 6.416.827 Baris x 58 kolom</p>
-        <a href="https://github.com/WiefranVarenzo/Recommendation-System-Project" class="text-primary font-medium inline-block mt-4 bg-primary text-white px-4 py-2 rounded-md shadow-md hover:bg-opacity-90">Lihat Proyek</a>
+        <a href="https://github.com/WiefranVarenzo/Recommendation-System-Project" class="text-primary font-medium inline-block mt-4 bg-primary text-white px-4 py-2 rounded-md shadow-md hover:bg-opacity-90">Lihat Github</a>
       </div>
 
     <div class="mb-12 p-4 md:w-1/2">
@@ -227,7 +227,7 @@
             Proyek ini bertujuan menganalisis sentimen aplikasi BCA dari scraping komentar Play Store, dengan melakukan preprocessing dan membandingkan tiga model: RCNN+FastText, GRU+GloVe, serta LSTM+Word2Vec untuk klasifikasi terbaik.
         </p>
         <p class="font-semibold text-base text-secondary">Dataset :144.000 Baris x 9 Kolom</p>
-        <a href="https://github.com/WiefranVarenzo/Sentiment-Analysis-of-BCA-Mobile-Reviews-on-Google-Play-Store" class="text-primary font-medium inline-block mt-4 bg-primary text-white px-4 py-2 rounded-md shadow-md hover:bg-opacity-90">Lihat Proyek</a>
+        <a href="https://github.com/WiefranVarenzo/Sentiment-Analysis-of-BCA-Mobile-Reviews-on-Google-Play-Store" class="text-primary font-medium inline-block mt-4 bg-primary text-white px-4 py-2 rounded-md shadow-md hover:bg-opacity-90">Lihat Github</a>
       </div>
 
 
