--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
           Menganalisa Tingkat Karyawan yang Keluar dari suatu Perusahan dengan menggunakan model Random Forest Classifier dan memvisualisasikannya dengan Tableau
         </p>
         <p class="font-semibold text-base text-secondary">Dataset: 1470 Baris × 35 Kolom</p>
-        <a href="https://github.com/WiefranVarenzo/Dicoding-Expert" class="text-primary font-medium inline-block mt-4 bg-primary text-white px-4 py-2 rounded-md shadow-md hover:bg-opacity-90">Lihat di GitHub</a>
+        <a href="https://github.com/WiefranVarenzo/Dicoding-Expert" class="text-primary font-medium inline-block mt-4 bg-primary text-white px-4 py-2 rounded-md shadow-md hover:bg-opacity-90">Lihat Github</a>
       </div>
         
       <div class="portfolio-item project-hidden mb-12 p-4 md:w-1/2">
@@ -276,7 +276,7 @@
           Memprediksi dan menganalisa tingkat dropout mahasiswa dari faktor-faktor yang ditetapkan. Disini akan dicari faktor atau indikasi mana yang paling berpengaruh menggunakan feature importance, serta memprediksi menggunakan model Random Forest Classifier
         </p>
         <p class="font-semibold text-base text-secondary">Dataset: 4424 Baris × 37 Kolom</p>
-        <a href="https://github.com/WiefranVarenzo/DicodingExpert2" class="text-primary font-medium inline-block mt-4 bg-primary text-white px-4 py-2 rounded-md shadow-md hover:bg-opacity-90">Lihat di GitHub</a>
+        <a href="https://github.com/WiefranVarenzo/DicodingExpert2" class="text-primary font-medium inline-block mt-4 bg-primary text-white px-4 py-2 rounded-md shadow-md hover:bg-opacity-90">Lihat GitHub</a>
       </div>
       
 
