--- a/full_portfolio.html
+++ b/full_portfolio.html
@@ -98,7 +98,7 @@
         <p class="font-medium text-base text-secondary">
             Proyek ini mengelompokkan pelanggan via K-Means dan DBSCAN, lalu memprediksi transaksi bank apakah mencurigakan atau tidak menggunakan model klasifikasi Random Forest dan SVM.
         </p>
-        <p class="font-semibold text-base text-secondary">Dataset:2.512 Baris x 16 Baris </p>
+        <p class="font-semibold text-base text-secondary">Dataset:2.512 Baris x 16 Kolom </p>
         <a href="https://github.com/WiefranVarenzo/Bank-Fraud-Detection-with-Unsupervised-and-Supervised-Learning" class="text-primary font-medium inline-block mt-4 bg-primary text-white px-4 py-2 rounded-md shadow-md hover:bg-opacity-90">Lihat Proyek</a>
       </div>
 
