--- a/index.html
+++ b/index.html
@@ -299,6 +299,17 @@
             <div class="flex flex-wrap">
                 <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
                     <div class="bg-white rounded-xl shadow-lg overflow-hidden mb-10">
+                        <img src="src/img/CodingCamp.png" alt="Programming" class="w-full">
+                        <div class="py-8 px-6 center">
+                            <h3 class="">
+                                <a href="#" class="block mb-3 font-semibold text-xl text-dark hover:text-primary truncate">Coding Camp Full Graduate</a></h3>
+                            <p class="font-medium text-base text-secondary mb-4">Saya telah menyelesaikan 6 bulan Bootcamp intensif Coding Camp by DBS dengan nilai akhir 97.0</p>
+                            </div>
+                    </div>
+                </div>
+            <div class="flex flex-wrap">
+                <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
+                    <div class="bg-white rounded-xl shadow-lg overflow-hidden mb-10">
                         <img src="src/img/stockintroduction.png" alt="Programming" class="w-full">
                         <div class="py-8 px-6 center">
                             <h3 class="">
