--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
             <div class="flex flex-wrap">
                 <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
                     <div class="bg-white rounded-xl shadow-lg overflow-hidden mb-10">
-                        <img src="src/img/CodingCamp.png" alt="Programming" class="w-full">
+                        <img src="src/img/CodingCamp.jpeg" alt="Programming" class="w-full">
                         <div class="py-8 px-6 center">
                             <h3 class="">
                                 <a href="#" class="block mb-3 font-semibold text-xl text-dark hover:text-primary truncate">Coding Camp Full Graduate</a></h3>
