--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
   </div>
 </section>
 
-     <section id="blog" class="pt-36 pb-32 bg-slate-200 relative">
+    <section id="blog" class="pt-36 pb-32 bg-slate-200 relative">
   <div class="container mx-auto px-4">
     <div class="max-w-xl mx-auto text-center mb-16">
       <h4 class="font-semibold text-lg text-primary mb-2">Aktivitas Saya</h4>
@@ -297,62 +297,62 @@
       </p>
     </div>
 
-    <div class="grid gap-8 sm:grid-cols-2 lg:grid-cols-3">
+    <div class="max-w-6xl mx-auto grid gap-6 sm:grid-cols-2 lg:grid-cols-3">
       <!-- Card 1 -->
-      <div class="bg-white rounded-xl shadow-lg overflow-hidden">
+      <div class="bg-white rounded-xl shadow-md overflow-hidden">
         <img src="src/img/CodingCamp.jpeg" alt="Coding Camp" class="w-full">
-        <div class="py-8 px-6">
+        <div class="py-6 px-5">
           <h3>
-            <a href="#" class="block mb-3 font-semibold text-xl text-dark hover:text-primary truncate">
+            <a href="#" class="block mb-2 font-semibold text-lg text-dark hover:text-primary truncate">
               Coding Camp Full Graduate
             </a>
           </h3>
-          <p class="font-medium text-base text-secondary">
+          <p class="font-medium text-sm text-secondary">
             Saya telah menyelesaikan 6 bulan Bootcamp intensif Coding Camp by DBS dengan nilai akhir 97.0
           </p>
         </div>
       </div>
 
       <!-- Card 2 -->
-      <div class="bg-white rounded-xl shadow-lg overflow-hidden">
+      <div class="bg-white rounded-xl shadow-md overflow-hidden">
         <img src="src/img/stockintroduction.png" alt="Sosialisasi Pasar Modal" class="w-full">
-        <div class="py-8 px-6">
+        <div class="py-6 px-5">
           <h3>
-            <a href="#" class="block mb-3 font-semibold text-xl text-dark hover:text-primary truncate">
+            <a href="#" class="block mb-2 font-semibold text-lg text-dark hover:text-primary truncate">
               Sosialisasi Pasar Modal - KSPM UG
             </a>
           </h3>
-          <p class="font-medium text-base text-secondary">
+          <p class="font-medium text-sm text-secondary">
             Saya melakukan sosialisasi kepada mahasiswa baru mengenai pasar modal atau saham
           </p>
         </div>
       </div>
 
       <!-- Card 3 -->
-      <div class="bg-white rounded-xl shadow-lg overflow-hidden">
+      <div class="bg-white rounded-xl shadow-md overflow-hidden">
         <img src="src/img/presentasisamsunginnovation.png" alt="Presentasi Final SIC" class="w-full">
-        <div class="py-8 px-6">
+        <div class="py-6 px-5">
           <h3>
-            <a href="#" class="block mb-3 font-semibold text-xl text-dark hover:text-primary truncate">
+            <a href="#" class="block mb-2 font-semibold text-lg text-dark hover:text-primary truncate">
               Presentasi Final SIC Batch 5
             </a>
           </h3>
-          <p class="font-medium text-base text-secondary">
+          <p class="font-medium text-sm text-secondary">
             Saya melakukan presentasi Final Top 10 Tim kelompok Mahasiswa Nasional - online
           </p>
         </div>
       </div>
 
       <!-- Card 4 -->
-      <div class="bg-white rounded-xl shadow-lg overflow-hidden">
+      <div class="bg-white rounded-xl shadow-md overflow-hidden">
         <img src="src/img/sertifikatmahir.png" alt="Bootcamp IDCamp" class="w-full">
-        <div class="py-8 px-6">
+        <div class="py-6 px-5">
           <h3>
-            <a href="#" class="block mb-3 font-semibold text-xl text-dark hover:text-primary truncate">
+            <a href="#" class="block mb-2 font-semibold text-lg text-dark hover:text-primary truncate">
               Mengikuti Bootcamp IDCamp
             </a>
           </h3>
-          <p class="font-medium text-base text-secondary">
+          <p class="font-medium text-sm text-secondary">
             Saya berkesempatan untuk mengikuti beasiswa IDCamp hingga tahap Mahir di bidang Data Science
           </p>
         </div>
@@ -360,6 +360,7 @@
     </div>
   </div>
 </section>
+
 
      <footer class="bg-dark pt-24 pb-12">
         <div class="container">
