--- a/index.html
+++ b/index.html
@@ -288,59 +288,68 @@
 </section>
 
 <section id="blog" class="pt-36 pb-32 bg-slate-200 relative">
-        <div class="container">
-            <div class="w-full px-4">
-                <div class="max-w-xl mx-auto text-center mb-16">
-                    <h4 class="font-semibold text-lg text-primary mb-2">Aktivitas Saya</h4>
-                    <h2 class="font-bold text-dark text-3xl mb-4 sm:text-4xl lg:text-5xl">Aktivitas Terkini</h2>
-                    <p class="font-medium text-md text-secondary md:text-lg">Berikut adalah aktivitas yang saya ikuti, baik dari kegiatan organisasi sampai kegiatan di luar kampus.</p>
-                </div>
-            </div>
-            <div class="flex flex-wrap">
-                <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
-                    <div class="bg-white rounded-xl shadow-lg overflow-hidden mb-10">
-                        <img src="src/img/CodingCamp.jpeg" alt="Programming" class="w-full">
-                        <div class="py-8 px-6 center">
-                            <h3 class="">
-                                <a href="#" class="block mb-3 font-semibold text-xl text-dark hover:text-primary truncate">Coding Camp Full Graduate</a></h3>
-                            <p class="font-medium text-base text-secondary mb-4">Saya telah menyelesaikan 6 bulan Bootcamp intensif Coding Camp by DBS dengan nilai akhir 97.0</p>
-                            </div>
-                    </div>
-                </div>
-            <div class="flex flex-wrap">
-                <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
-                    <div class="bg-white rounded-xl shadow-lg overflow-hidden mb-10">
-                        <img src="src/img/stockintroduction.png" alt="Programming" class="w-full">
-                        <div class="py-8 px-6 center">
-                            <h3 class="">
-                                <a href="#" class="block mb-3 font-semibold text-xl text-dark hover:text-primary truncate">Sosialisasi Pasar Modal - KSPM UG</a></h3>
-                            <p class="font-medium text-base text-secondary mb-4">Saya melakukan sosialisasi kepada mahasiswa baru mengenai pasar modal atau saham</p>
-                            </div>
-                    </div>
-                </div>
-                <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
-                    <div class="bg-white rounded-xl shadow-lg overflow-hidden mb-10">
-                        <img src="src/img/presentasisamsunginnovation.png" alt="Programming" class="w-full">
-                        <div class="py-8 px-6 ">
-                            <h3 class="">
-                                <a href="#" class="block mb-3 font-semibold text-xl text-dark hover:text-primary truncate">Presentasi Final SIC Batch 5</a></h3>
-                            <p class="font-medium text-base text-secondary mb-4">Saya melakukan presentasi Final Top 10 Tim kelompok Mahasiswa Nasional - online</p>
-                            </div>
-                    </div>
-                </div>
-                <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
-                    <div class="bg-white rounded-xl shadow-lg overflow-hidden mb-10">
-                        <img src="src/img/sertifikatmahir.png" alt="Programming" class="w-full">
-                        <div class="py-8 px-6">
-                            <h3 class="">
-                                <a href="#" class="block mb-3 font-semibold text-xl text-dark hover:text-primary truncate">Mengikuti Bootcamp IDCamp</a></h3>
-                            <p class="font-medium text-base text-secondary mb-4">Saya berkesempatan untuk mengikuti beasiswa IDCamp hingga tahap Mahir di bidang Data Science</p>
-                            </div>
-                    </div>
-                </div>
+    <div class="container">
+        <div class="w-full px-4">
+            <div class="max-w-xl mx-auto text-center mb-16">
+                <h4 class="font-semibold text-lg text-primary mb-2">Aktivitas Saya</h4>
+                <h2 class="font-bold text-dark text-3xl mb-4 sm:text-4xl lg:text-5xl">Aktivitas Terkini</h2>
+                <p class="font-medium text-md text-secondary md:text-lg">Berikut adalah aktivitas yang saya ikuti, baik dari kegiatan organisasi sampai kegiatan di luar kampus.</p>
             </div>
         </div>
-     </section>
+
+        <div class="flex flex-wrap justify-center">
+
+            <div class="w-full px-4 md:w-1/2 xl:w-1/3">
+                <div class="bg-white rounded-xl shadow-lg overflow-hidden mb-10">
+                    <img src="src/img/CodingCamp.jpeg" alt="Coding Camp" class="w-full">
+                    <div class="py-8 px-6">
+                        <h3 class="block mb-3 font-semibold text-xl text-dark hover:text-primary truncate">
+                            <a href="#">Coding Camp Full Graduate</a>
+                        </h3>
+                        <p class="font-medium text-base text-secondary mb-4">Saya telah menyelesaikan 6 bulan Bootcamp intensif Coding Camp by DBS dengan nilai akhir 97.0</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="w-full px-4 md:w-1/2 xl:w-1/3">
+                <div class="bg-white rounded-xl shadow-lg overflow-hidden mb-10">
+                    <img src="src/img/stockintroduction.png" alt="Sosialisasi Pasar Modal" class="w-full">
+                    <div class="py-8 px-6">
+                        <h3 class="block mb-3 font-semibold text-xl text-dark hover:text-primary truncate">
+                            <a href="#">Sosialisasi Pasar Modal - KSPM UG</a>
+                        </h3>
+                        <p class="font-medium text-base text-secondary mb-4">Saya melakukan sosialisasi kepada mahasiswa baru mengenai pasar modal atau saham.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="w-full px-4 md:w-1/2 xl:w-1/3">
+                <div class="bg-white rounded-xl shadow-lg overflow-hidden mb-10">
+                    <img src="src/img/presentasisamsunginnovation.png" alt="Presentasi Final SIC" class="w-full">
+                    <div class="py-8 px-6">
+                        <h3 class="block mb-3 font-semibold text-xl text-dark hover:text-primary truncate">
+                            <a href="#">Presentasi Final SIC Batch 5</a>
+                        </h3>
+                        <p class="font-medium text-base text-secondary mb-4">Saya melakukan presentasi Final Top 10 Tim kelompok Mahasiswa Nasional - online.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="w-full px-4 md:w-1/2 xl:w-1/3">
+                <div class="bg-white rounded-xl shadow-lg overflow-hidden mb-10">
+                    <img src="src/img/sertifikatmahir.png" alt="Sertifikat Mahir IDCamp" class="w-full">
+                    <div class="py-8 px-6">
+                        <h3 class="block mb-3 font-semibold text-xl text-dark hover:text-primary truncate">
+                            <a href="#">Mengikuti Bootcamp IDCamp</a>
+                        </h3>
+                        <p class="font-medium text-base text-secondary mb-4">Saya berkesempatan untuk mengikuti beasiswa IDCamp hingga tahap Mahir di bidang Data Science.</p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</section>
 
 
      <footer class="bg-dark pt-24 pb-12">
