--- a/index.html
+++ b/index.html
@@ -299,17 +299,33 @@
 
         <div class="flex flex-wrap justify-center">
 
-            <div class="w-full px-4 md:w-1/2 xl:w-1/3">
-                <div class="bg-white rounded-xl shadow-lg overflow-hidden mb-10">
-                    <img src="src/img/CodingCamp.jpeg" alt="Coding Camp" class="w-full">
-                    <div class="py-8 px-6">
-                        <h3 class="block mb-3 font-semibold text-xl text-dark hover:text-primary truncate">
-                            <a href="#">Coding Camp Full Graduate</a>
-                        </h3>
-                        <p class="font-medium text-base text-secondary mb-4">Saya telah menyelesaikan 6 bulan Bootcamp intensif Coding Camp by DBS dengan nilai akhir 97.0</p>
-                    </div>
+        <div class="w-full px-4 md:w-1/2 xl:w-1/3">
+          <div class="bg-white rounded-xl shadow-lg overflow-hidden mb-10">
+            <!-- Swiper -->
+            <div class="swiper swiper-card">
+              <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                  <img src="src/img/CodingCamp.jpeg" alt="Coding Camp" class="w-full" />
                 </div>
+                <div class="swiper-slide">
+                  <img src="src/img/stockintroduction.png" alt="Coding Camp 2" class="w-full" />
+                </div>
+              </div>
+              <!-- Pagination dots -->
+              <div class="swiper-pagination"></div>
             </div>
+        
+            <div class="py-8 px-6">
+              <h3 class="block mb-3 font-semibold text-xl text-dark hover:text-primary truncate">
+                <a href="#">Coding Camp Full Graduate</a>
+              </h3>
+              <p class="font-medium text-base text-secondary mb-4">
+                Saya telah menyelesaikan 6 bulan Bootcamp intensif Coding Camp by DBS dengan nilai akhir 97.0
+              </p>
+            </div>
+          </div>
+        </div>
+
 
             <div class="w-full px-4 md:w-1/2 xl:w-1/3">
                 <div class="bg-white rounded-xl shadow-lg overflow-hidden mb-10">
