--- a/index.html
+++ b/index.html
@@ -302,15 +302,20 @@
         <div class="w-full px-4 md:w-1/2 xl:w-1/3">
           <div class="bg-white rounded-xl shadow-lg overflow-hidden mb-10">
             <!-- Swiper -->
-            <div class="swiper swiper-card">
+            <div class="swiper swiper-card relative">
               <div class="swiper-wrapper">
                 <div class="swiper-slide">
                   <img src="src/img/CodingCamp.jpeg" alt="Coding Camp" class="w-full" />
                 </div>
                 <div class="swiper-slide">
-                  <img src="src/img/stockintroduction.png" alt="Coding Camp 2" class="w-full" />
+                  <img src="src/img/CodingCamp2.jpeg" alt="Coding Camp 2" class="w-full" />
                 </div>
               </div>
+        
+              <!-- Navigation arrows -->
+              <div class="swiper-button-next"></div>
+              <div class="swiper-button-prev"></div>
+        
               <!-- Pagination dots -->
               <div class="swiper-pagination"></div>
             </div>
@@ -325,6 +330,7 @@
             </div>
           </div>
         </div>
+
 
 
             <div class="w-full px-4 md:w-1/2 xl:w-1/3">
