--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
                   <img src="src/img/CodingCamp.jpeg" alt="Coding Camp" class="w-full" />
                 </div>
                 <div class="swiper-slide">
-                  <img src="src/img/CodingCamp2.jpeg" alt="Coding Camp 2" class="w-full" />
+                  <img src="src/img/stockintroduction.png" alt="Coding Camp 2" class="w-full" />
                 </div>
               </div>
         
