--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
             <div class="swiper swiper-card relative">
               <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                  <img src="src/img/CodingCamp.jpeg" alt="Coding Camp" class="w-full" />
+                  <img src="src/img/CodingCamp.png" alt="Coding Camp" class="w-full" />
                 </div>
                 <div class="swiper-slide">
                   <img src="src/img/FinalTranscript.png" alt="Coding Camp 2" class="w-full" />
